samples/_failures_safe/1761263106_862883_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df1508a4.c: In function ‘main’:
./samples/SAFE/__tmp_df1508a4.c:187:47: error: missing terminating ' character
  187 |                 input[strcspn(input, "\n")] = '\0
      |                                               ^~~
./samples/SAFE/__tmp_df1508a4.c:187:17: error: expected expression at end of input
  187 |                 input[strcspn(input, "\n")] = '\0
      |                 ^~~~~
./samples/SAFE/__tmp_df1508a4.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df1508a4.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df1508a4.c:187:17: error: expected declaration or statement at end of input
